feat: create main redirection logic for short urls
