# apps/api/openapi.json
@@ -1,6 +1,36 @@
 {
   "openapi": "3.0.0",
   "paths": {
+    "/{code}": {
+      "get": {
+        "operationId": "AppController_redirectToLongUrl",
+        "parameters": [
+          {
+            "name": "code",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "App"
+        ]
+      }
+    },
     "/metrics": {
       "get": {
         "operationId": "PrometheusController_index",
